[package]
name = "coral-bleaching"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = "2.33.3"
hdf5 = "0.7.1"
indicatif = "0.16.2"
num-traits = "0.2.14"
rayon = "1.5.1"
tempfile = "3.2.0"
thread_local = "1.1.3"

[dependencies.ndarray]
version = "0.15.3"
features = ["rayon"]