[package]
name = "turbocor"
version = "0.1.0"
edition = "2018"

[profile.release]
# debug = true

[dependencies]
byteorder = "1.4.3"
clap = "2.33.3"
hdf5 = "0.7.1"
num-traits = "0.2.14"
partial_sort = "0.1.2"
rayon = "1.5.1"
tempfile = "3.2.0"
thread_local = "1.1.3"

[dependencies.indicatif]
version = "0.16.2"
features = ["rayon"]
